# MLH_PE_URL_Shortener

./: .coverage  .dockerignore  .env.example  .gitignore  DOCUMENTATION_AUDIT_REPORT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SUBMISSION_RELIABILITY.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  swagger_server.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  load-test.yml  load-tests.yml  test.yml  unit-tests.yml
app/: __init__.py  auth.py  database.py  event_writer.py  logging_config.py  middleware.py  migrate.py  tracing.py  utils.py
app/models/: __init__.py  event.py  url.py  url_mapping.py  user.py
autoscaler/: Dockerfile  autoscaler.py  scaler.py
data/: events.csv  urls.csv  users.csv
docs/: ARCHITECTURE.md  AUTOMATED_TESTS.md  BOTTLENECK_REPORT.md  CAPACITY_PLAN.md  DECISION_LOG.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  ENV_VARS.md  ERROR_HANDLING.md  FAILURE_MODES.md  LOAD_TEST_RESULTS.md  RUNBOOK.md  SLO.md  SUBMISSION_TESTS.md  TRACK1_RELIABILITY_ENGINEERING.md  TRACK2_SCALABILITY_ENGINEERING.md  TRACK3_INCIDENT_RESPONSE.md  TRACK4_DOCUMENTATION.md  TRACKS_MASTER_PLAN.md  TROUBLESHOOTING.md  _config.yml  api.md  config.md  index.html  index.md  openapi.yaml
incident-response/: README.md
loadtests/: k6_test.js  k6_test2_breakpoint.js  k6_test2_smoke.js  results_1000vu.txt  results_1000vu_final.txt  results_breakpoint.txt  results_smoke.txt  results_soak.txt  results_stress.txt  results_sustained.txt  smoke.js  soak.js  stress.js  sustained.js
nginx/: nginx.conf
results/: stress_test.md
scripts/: autoscaler.sh  chaos-test.sh  chaos_test.sh  deploy.sh  digitalocean-user-data.sh  init_db.py  pg_backup.sh  seed.py
tests/: baseline_results.json  benchmark.py  conftest.py  optimized_results.json  test_api.py  test_coverage_gaps.py  test_events.py  test_health.py  test_integration_routes.py  test_performance.py  test_unit.py  test_unit_modules.py  test_urls.py  test_users.py
(+33 files in other folders)
